Fix: Improve Vim cursor visibility

--- a/theme.css
+++ b/theme.css
@@ -1242,6 +1242,19 @@ tr:last-child td:last-child {
   /* border: unset !important; */
 }
 
+/* Vim thick cursor */
+.theme-dark .ͼo.cm-focused .cm-fat-cursor {
+  background-color: oklch(
+    from var(--base-accent) 75% calc(c + 0.1) h
+  ) !important;
+}
+
+.theme-light .ͼo.cm-focused .cm-fat-cursor {
+  background-color: oklch(
+    from var(--base-accent) 75% calc(c + 0.1) h
+  ) !important;
+}
+
 /* TODO: Mermaid */
 
 /* .node polygon, .node rect, .mermaid .actor, .mermaid .actor-line, .mermaid .edgeLabel p { */
